--- a/Online Subtitle/popup/popup.html
+++ b/Online Subtitle/popup/popup.html
@@ -16,31 +16,33 @@
     </div>
 
     <div class="control-group">
+      <label for="apiKeyInput">Deepgram API Key</label>
+      <input type="password" id="apiKeyInput" placeholder="Enter your Deepgram API key">
+      <a href="https://console.deepgram.com/signup" target="_blank" class="api-link">Get free API key ($200 credit)</a>
+    </div>
+
+    <div class="control-group">
       <label for="languageSelect">Language</label>
       <select id="languageSelect">
-        <option value="en-US">English (US)</option>
-        <option value="en-GB">English (UK)</option>
-        <option value="es-ES">Spanish (Spain)</option>
-        <option value="es-MX">Spanish (Mexico)</option>
-        <option value="fr-FR">French</option>
-        <option value="de-DE">German</option>
-        <option value="it-IT">Italian</option>
-        <option value="pt-BR">Portuguese (Brazil)</option>
-        <option value="pt-PT">Portuguese (Portugal)</option>
-        <option value="ru-RU">Russian</option>
-        <option value="ja-JP">Japanese</option>
-        <option value="ko-KR">Korean</option>
-        <option value="zh-CN">Chinese (Simplified)</option>
-        <option value="zh-TW">Chinese (Traditional)</option>
-        <option value="hi-IN">Hindi</option>
-        <option value="ar-SA">Arabic</option>
-        <option value="nl-NL">Dutch</option>
-        <option value="pl-PL">Polish</option>
-        <option value="tr-TR">Turkish</option>
-        <option value="vi-VN">Vietnamese</option>
-        <option value="th-TH">Thai</option>
-        <option value="te-IN">Telugu</option>
-        <option value="ta-IN">Tamil</option>
+        <option value="en">English</option>
+        <option value="es">Spanish</option>
+        <option value="fr">French</option>
+        <option value="de">German</option>
+        <option value="it">Italian</option>
+        <option value="pt">Portuguese</option>
+        <option value="ru">Russian</option>
+        <option value="ja">Japanese</option>
+        <option value="ko">Korean</option>
+        <option value="zh">Chinese</option>
+        <option value="hi">Hindi</option>
+        <option value="ar">Arabic</option>
+        <option value="nl">Dutch</option>
+        <option value="pl">Polish</option>
+        <option value="tr">Turkish</option>
+        <option value="vi">Vietnamese</option>
+        <option value="th">Thai</option>
+        <option value="te">Telugu</option>
+        <option value="ta">Tamil</option>
       </select>
     </div>
 
@@ -63,7 +65,7 @@
     </div>
 
     <div class="info">
-      <p>Click "Start Subtitles" to begin capturing audio and generating real-time subtitles.</p>
+      <p>Captures audio directly from the video - works with headphones!</p>
     </div>
   </div>
 
